# tape_simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
include/: Config.hpp  Logs.hpp  Sort.hpp  TapeSimulator.hpp
src/: Config.cpp  Logs.cpp  Sort.cpp  TapeSimulator.cpp  main.cpp  test.cpp
tests/ans/: ans1
tests/res/: res3
tests/test/: test1  test3
